--- a/carousel.css
+++ b/carousel.css
@@ -1,3 +1,10 @@
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img{
 	margin: auto;
+}
+
+.jumbotron{
+padding-top: 20px;
+padding-bottom: 20px;
+text-align: center;
+}
